# cyberwave-edge-ros-ugv

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STATUS.md  entrypoint.sh  package.xml  requirements-dev.txt  requirements.txt  setup.py  test-ugv-e2e.sh  test-ugv.sh
.github/workflows/: push-to-docker-hub.yml
config/: params.yaml
config/mappings/: default.yaml  robot_ugv_beast_v1.yaml  robot_ur7_v1.yaml
docker-conf/: Dockerfile  Dockerfile.optimized  build-local.sh
docs/: IMPLEMENTATION.md  README.md  ROBOT_CONFIGURATION.md  TROUBLESHOOTING.md
docs/edge-ros-ugv-beast-setup/: UGV-Beast-conf.md  edge-ros-ugv-beast.md
launch/: mqtt_bridge.launch.py
mqtt_bridge/: cyberwave_mqtt_adapter.py  edge_driver_env.py  health.py  logger_shim.py  mapping.py  mqtt_bridge_node.py  ros_topic_namespace.py  setup.cfg  setup.py
mqtt_bridge/config/: params.yaml
mqtt_bridge/config/mappings/: default.yaml  robot_ugv_beast_v1.yaml
mqtt_bridge/docker-conf/: .dockerignore  Dockerfile  README.md  setup-ssh-key.sh
mqtt_bridge/docs/edge-ros-ugv-beast-setup/: edge-ros-ugv-beast.md
mqtt_bridge/docs/edge-ros-ur7-setup/: README.md  edge-ros-ur7.md  ros2_digital_pin_vacuum_control.urp
mqtt_bridge/launch/: bridge_launch.py  mqtt_bridge.launch.py
mqtt_bridge/mqtt_bridge/: command_handler.py  cyberwave_mqtt_adapter.py  mqtt_bridge_node.py
mqtt_bridge/mqtt_bridge/plugins/: ros_camera.py  ugv_beast_command_handler.py
mqtt_bridge/plugins/: command_handler_base.py  internal_odometry.py  navigation_bridge.py  ros_camera.py  ugv_beast_command_handler.py
mqtt_bridge/rpi-image/script-build-image/: create_ugv_image.sh  create_ugv_image_complete.sh  cyb-ugv-builder.sh  (+3 more)
mqtt_bridge/tests/: conftest.py  test_edge_driver_env.py  test_ros_topic_namespace.py  test_ugv_beast_command_handler.py
resource/: mqtt_bridge
scripts/: cyberwave-edge-ros.service  install.sh  uninstall.sh
scripts/ugv_beast/: clean_build_mqtt.sh  cyb_ugv_beast_service_install.sh  ugv_services_install.sh
tests/: __init__.py  mock_esp32.py  smoke_test.sh
(+58 files in other folders)
