<?xml version="1.2"?>
<package format="3">
  <name>cyberwave_edge_ros</name>
  <version>0.1.2</version>
  <description>ROS2 MQTT bridge for Cyberwave digital twin platform</description>
  <maintainer email="info@cyberwave.com">Cyberwave</maintainer>
  <license>Apache-2.0</license>

  <url type="website">https://cyberwave.com</url>
  <url type="repository">https://github.com/cyberwave-os/cyberwave-edge-ros</url>
  <url type="bugtracker">https://github.com/cyberwave-os/cyberwave-edge-ros/issues</url>

  <author email="info@cyberwave.com">Cyberwave Team</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>

  <exec_depend>python3-paho-mqtt</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-dotenv</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
