<?xml version="1.0"?>
<package format="3">
  <name>mqtt_bridge</name>
  <version>0.1.0</version>
  <description>Simple ROS2 MQTT bridge</description>
  <maintainer email="info@cyberwave.com">Cyberwave</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>

  <!-- system packages for runtime Python dependencies; helps rosdep install them -->
  <exec_depend>python3-paho-mqtt</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
  
  <!-- paho-mqtt is a PyPI dependency declared in setup.py -->
</package>
